# tool-rate-limiter

./: README.md  pyproject.toml
src/: cli.py  limiter.py
tests/: test_cli.py  test_limiter.py
